--- a/pod/perl.pod
+++ b/pod/perl.pod
@@ -181,6 +181,7 @@ aux h2ph h2xs perlbug pl2pm pod2html pod2man splain xsubpp
 
     perlhist		Perl history records
     perldelta		Perl changes since previous version
+    perl5277delta	Perl changes in version 5.27.7
     perl5276delta	Perl changes in version 5.27.6
     perl5275delta	Perl changes in version 5.27.5
     perl5274delta	Perl changes in version 5.27.4
