--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -40,6 +40,18 @@ Additionally, perl now sets the close-on-exec flag more reliably, whether
 it does so atomically or not.  Most file descriptors were getting the
 flag set, but some were being missed.
 
+=head2 Mixed Unicode scripts are now detectable
+
+A mixture of scripts, such as Cyrillic and Latin, in a string is often
+the sign of a spoofing attack.  A new regular expression construct
+now allows for easy detection of these.  For example, you can say
+
+ qr/(?script_run: \d+ \b )/x
+
+And the digits matched will all be from the same set of 10.  You won't
+get a look-alike digit from a different script that has a different
+value than what it appears to be.
+
 =head1 Security
 
 XXX Any security-related notices go here.  In particular, any security
