--- a/pod/perldiag.pod
+++ b/pod/perldiag.pod
@@ -3146,10 +3146,13 @@ an arbitrary reference was blessed into the "version" class.
 =item In '(*VERB...)', the '(' and '*' must be adjacent in regex;
 marked by S<<-- HERE> in m/%s/
 
-(F) The two-character sequence C<"(*"> in
-this context in a regular expression pattern should be an
-indivisible token, with nothing intervening between the C<"(">
-and the C<"*">, but you separated them.
+=item In '(+...)', the '(' and '+' must be adjacent in regex;
+marked by S<<-- HERE> in m/%s/
+
+(F) The two-character sequences C<"(+"> and C<"(*"> in
+this context in a regular expression pattern should be
+indivisible tokens, with nothing intervening between the C<"(">
+and the C<"*"> or C<"+">, but you separated them.
 
 =item ioctl is not implemented
 
@@ -6093,6 +6096,12 @@ in a future Perl version:
     use feature "signatures";
     sub foo ($left, $right) { ... }
 
+=item The script_run feature is experimental
+
+(S experimental::script_run) This feature is experimental and its
+behavior may in any future release of perl.
+See L<perlre/Script Runs>.
+
 =item The stat preceding %s wasn't an lstat
 
 (F) It makes no sense to test the current stat buffer for symbolic
@@ -6581,6 +6590,11 @@ did not exist, even after an attempt to create it.
 (F) The second argument of 3-argument open() is not among the list
 of valid modes: C<< < >>, C<< > >>, C<<< >> >>>, C<< +< >>,
 C<< +> >>, C<<< +>> >>>, C<-|>, C<|->, C<< <& >>, C<< >& >>.
+
+=item Unknown (+ pattern in regex; marked by S<<-- HERE> in m/%s/
+
+(F) The C<(+> was followed by something that the regular expression
+compiler does not recognize.  Check your spelling.
 
 =item Unknown PerlIO layer "%s"
 
