Add script_run to perlexperiment

--- a/pod/perlexperiment.pod
+++ b/pod/perlexperiment.pod
@@ -134,6 +134,16 @@ L<[perl #116487]|https://rt.perl.org/rt3/Ticket/Display.html?id=116487>.
 
 =item Unicode in Perl on EBCDIC
 
+=item Script runs
+
+Introduced in Perl 5.28.0
+
+Using this feature triggers warnings in the category
+C<experimental::script_run>.
+
+See also: L<perlre/Script Runs>
+
+
 =back
 
 =head2 Accepted features
