perlre: Note a way to continue long regexes across lines
This documents a usage to include \n chars within (?#\n) to easily
break long patterns into smaller chunks that fit on a line.  I was not
familiar with this technique until I saw it used, in some of our core
code, so am documenting it for others.

--- a/pod/perlre.pod
+++ b/pod/perlre.pod
@@ -1360,6 +1360,10 @@ an escape sequence.   Examples:
  # for the  closing ')' to match
  qr/\(?#the backslash means this isn't a comment)p{Any}/
 
+ # Comments can be used to fold long patterns into multiple lines
+ qr/First part of a long regex(?#
+   )remaining part/
+
 =item C<(?adlupimnsx-imnsx)>
 
 =item C<(?^alupimnsx)>
