--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -154,6 +154,13 @@ L<XXX> has been upgraded from version A.xx to B.yy.
 
 If there was something important to note about this change, include that here.
 
+=item *
+
+L<Unicode::UCD> has been upgraded from version 0.69 to 0.70.
+
+The function C<num> now accepts an optional parameter to help in
+diagnosing error returns.
+
 =back
 
 =head2 Removed Modules and Pragmata
