--- a/pod/perltrap.pod
+++ b/pod/perltrap.pod
@@ -170,9 +170,8 @@ C<do { } while> construct.  See L<perlsyn/"Loop Control">.
 
 =item *
 
-The switch statement is called C<given>/C<whereso> and only available
-in its current form in perl 5.28 or newer.  See L<perlsyn/"Switch
-Statements">.
+The switch statement is called C<given>/C<when> and only available in
+perl 5.10 or newer.  See L<perlsyn/"Switch Statements">.
 
 =item *
 
