--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -170,6 +170,13 @@ L<Unicode::UCD> has been upgraded from version 0.69 to 0.70.
 The function C<num> now accepts an optional parameter to help in
 diagnosing error returns.
 
+=item *
+
+L<XSLoader> has been upgraded from version 0.29 to 0.30.
+
+Platforms that use C<mod2fname> to edit the names of loadable libraries now look for
+bootstrap (.bs) files under the correct, non-edited name.
+
 =back
 
 =head2 Removed Modules and Pragmata
