Update docs wrt bitwise ops

--- a/pod/perlexperiment.pod
+++ b/pod/perlexperiment.pod
@@ -92,18 +92,6 @@ C<experimental::re_strict>.
 
 See L<re/'strict' mode>
 
-=item String- and number-specific bitwise operators
-
-Introduced in Perl 5.22.0
-
-See also: L<perlop/Bitwise String Operators>
-
-Using this feature triggers warnings in the category
-C<experimental::bitwise>.
-
-The ticket for this feature is
-L<[perl #123707]|https://rt.perl.org/rt3/Ticket/Display.html?id=123707>.
-
 =item The <:win32> IO pseudolayer
 
 The ticket for this feature is
@@ -255,6 +243,12 @@ Accepted in Perl 5.24.0
 Introduced in Perl 5.18.0
 
 Accepted in Perl 5.26.0
+
+=item String- and number-specific bitwise operators
+
+Introduced in Perl 5.22.0
+
+Accepted in Perl 5.28.0
 
 =back
 
